now the game is served globally after login

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body onload="myFunction()">
-
-<h1>Hanseatic!</h1>
-
+<body onload="forwardFunc()">
 <script>
-    function myFunction() {
-        window.location = '/rest/external/hanseatic';
+    function forwardFunc() {
+        window.location = '/login';
     }
 </script>
-
 </body>
 </html>
