--- a/public/login.html
+++ b/public/login.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <!-- <script>
+        console.log('login page');
+        function myFunction() {
+            window.location = '/rest/external/hanseatic';
+        }
+    </script>
+    <script type='text/javascript', src='/extlib/node_modules/webgme/dist/webgme.classes.build.js'/>
+    -->
+</head>
 <body onload="myFunction()">
-
-<h1>Hanseatic!</h1>
-
 <script>
+    console.log('login page');
     function myFunction() {
         window.location = '/rest/external/hanseatic';
     }
 </script>
-
 </body>
 </html>
